# wrfrun

./: .gitattributes  .gitignore  .readthedocs.yaml  README.md  TODO.md  build.sh  main.py  meson.build  meta.yaml  pyproject.toml  这是我目前正在维护的一个Python项目的基本要览，可以帮我生成一个合适的README大纲吗(可以预留出一些展示代码的位置)：项目的名称是wrfrun，目的是提供一个更现代、通用的数值模式运行框.md
.github/workflows/: python-package.yaml  python-wheel-package.yaml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_templates/autosummary/: class.rst
docs/source/api/: cli.rst  core._config.rst  core._constant.rst  core._debug.rst  core._exec_db.rst  core._namelist.rst  core._record.rst  core._resource.rst  core.base.rst  core.config.rst  core.core.rst  core.error.rst  core.replay.rst  core.rst  core.server.rst  core.type.rst  data.rst  extension.goos_sst.core.rst  extension.goos_sst.goos_sst.rst  extension.goos_sst.res.rst  extension.goos_sst.rst  extension.goos_sst.utils.rst  extension.littler.core.rst  extension.littler.rst  extension.micaps.rst  extension.rst  extension.utils.rst  index.rst  log.rst  model.base.rst  model.constants.rst  model.palm.core.rst  model.palm.namelist.rst  model.palm.rst  model.palm.utils.rst  model.plot.rst  model.roms.core.rst  model.roms.rst  model.rst  model.type.rst  (+29 more)
docs/source/development/: coding_style.rst  develop_guide_core.rst  develop_guide_model.rst  develop_guide_res.rst  environment.rst  index.rst  wrfrun_develop_guide.rst
docs/source/documentation/: config_file.rst  context.rst  global_var_wrfrun.rst  global_var_wrfrun_config.rst  index.rst
docs/source/usage/: custom_executable.rst  index.rst  installation.rst  quick_start.rst
wrfrun/: __init__.py  cli.py  data.py  job_scheduler.py  log.py  meson.build  pbs.py  run.py  utils.py  workspace.py
wrfrun/core/: __init__.py  _config.py  _constant.py  _debug.py  _exec_db.py  _namelist.py  _record.py  _resource.py  base.py  config.py  constant.py  core.py  error.py  meson.build  namelist.py  replay.py  server.py  type.py
wrfrun/extension/: __init__.py  meson.build  utils.py
wrfrun/extension/goos_sst/: README.md  __init__.py  core.py  goos_sst.py  meson.build  utils.py
wrfrun/extension/goos_sst/res/: Vtable.ERA_GOOS_SST  __init__.py  meson.build
wrfrun/extension/littler/: README.md  __init__.py  core.py  meson.build  utils.py
wrfrun/extension/micaps/: README.md
wrfrun/model/: __init__.py  base.py  constants.py  core.py  geodata.py  meson.build  namelist.py  ndown.py  plot.py  run.py  scheme.py  type.py  utils.py
wrfrun/model/dutils/: __init__.py  core.py  meson.build  ndown_utils.py  wps_utils.py
wrfrun/model/palm/: __init__.py  core.py  meson.build  namelist.py  utils.py
wrfrun/model/roms/: __init__.py  core.py  meson.build
wrfrun/model/utils/: __init__.py  core.py  meson.build  wps_utils.py  wrf.py  wrf_utils.py
wrfrun/model/wrf/: __init__.py  _metgrid.py  _ndown.py  core.py  exec_wrap.py  geodata.py  log.py  meson.build  namelist.py  plot.py  scheme.py  utils.py  vtable.py  workspace.py
wrfrun/plot/: __init__.py  meson.build  wps.py
wrfrun/res/: README.md  __init__.py  _doc.rst  config.toml.template  config.yaml.template  generate_init.py  gitignore.rules  meson.build  name_map.json  run.sh.template
wrfrun/res/config/: config.template.toml  meson.build  name_map.json  palm.template.toml  roms.template.toml  wrf.template.toml
wrfrun/res/extension/: __init__.py  meson.build  name_map.json  plotgrids.ncl
wrfrun/res/geogrid/: GEOGRID.SHAN_DONG_LANDUSE_SOIL_TOP.TBL  __init__.py  meson.build
wrfrun/res/job_scheduler/: __init__.py  meson.build  name_map.json  pbs.template  slurm.template
wrfrun/res/metgrid/: __init__.py  meson.build
wrfrun/res/namelist/: __init__.py  meson.build  name_map.json  namelist.input.da_wrfvar.template  namelist.input.dfi.template  namelist.input.real.template  namelist.input.wrf.template  namelist.wps.template  parame.in.template
wrfrun/res/scheduler/: lsf.template  meson.build  name_map.json  pbs.template  slurm.template
wrfrun/res/ungrib/: __init__.py  meson.build
wrfrun/scheduler/: __init__.py  env.py  lsf.py  meson.build  pbs.py  script.py  slurm.py  utils.py
wrfrun/workspace/: __init__.py  core.py  meson.build  palm.py  roms.py  wrf.py
