[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[project]
name = "wrfrun"
version = "0.1.9"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = '>=3.10'
authors = [{name = "Syize", email = "syizeliu@gmail.com"}]
maintainers = [
    { name = "Syize", email = "syizeliu@gmail.com" },
]
keywords = [ "WRF", ]
description = "wrfrun is a comprehensive toolkit for managing and using WRF"
dependencies = [
    "numpy",
    "xarray",
    "netCDF4",
    "rich",
    "pandas",
    "f90nml",
    "cdsapi",
    "matplotlib",
    "Cartopy",
    "wrf-python",
    "cfgrib",
    "tomli",
    "tomli-w",
    "haversine"
]

[project.urls]
homepage = "https://github.com/Syize/wrfrun"
repository = "https://github.com/Syize/wrfrun"
documentation = "https://wrfrun.syize.cn"
"Bug Tracker" = "https://github.com/Syize/wrfrun/issues"

[project.scripts]
wrfrun = "wrfrun.cli:main_entry"

[tool.poetry]
readme = "README.md"

[tool.uv.extra-build-dependencies]
wrf-python = ["numpy"]

[dependency-groups]
dev = [
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    "sphinx-design",
    "meson-python",
    "sphinx-autobuild",
]
