[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[project]
name = "wrfrun"
version = "0.3.0"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = '>=3.10'
authors = [{name = "Syize", email = "syizeliu@gmail.com"}]
maintainers = [
    { name = "Syize", email = "syizeliu@gmail.com" },
]
keywords = [ "WRF", ]
description = "wrfrun is a comprehensive toolkit for managing and using WRF"
dependencies = [
    "numpy",
    "xarray",
    "netCDF4",
    "rich",
    "pandas",
    "f90nml",
    "cdsapi",
    "matplotlib",
    "Cartopy",
    "tomli",
    "tomli-w",
    "haversine",
    "wrf-python>=1.3.1",
    "cfgrib>=0.9.15.1",
]

[project.urls]
homepage = "https://github.com/Syize/wrfrun"
repository = "https://github.com/Syize/wrfrun"
documentation = "https://wrfrun.syize.cn"
"Bug Tracker" = "https://github.com/Syize/wrfrun/issues"

[project.scripts]
wrfrun = "wrfrun.cli:main_entry"

[tool.poetry]
readme = "README.md"

[tool.uv.extra-build-dependencies]
wrf-python = ["numpy"]

[dependency-groups]
dev = [
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    "sphinx-design",
    "meson-python",
    "sphinx-autobuild",
    "ruff>=0.14.3",
    "pyright>=1.1.407",
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["D", "E", "F", "I"]
ignore = ["F403", "D211", "D212", "D200", "D203", "D401", "D404", "D205", "D400", "D415"]

[tool.pyright]
include = ["wrfrun"]
pythonVersion = "3.10"
pythonPlatform = "Linux"
reportArgumentType = false
