py3.install_sources(
    [
        '__init__.py',
        '_config.py',
        '_constant.py',
        '_exec_db.py',
        '_namelist.py',
        '_record.py',
        '_resource.py',
        'base.py',
        'core.py',
        'error.py',
        'replay.py',
        'server.py',
        'type.py',
    ],
    subdir: 'wrfrun/core'
)