py3.install_sources(
    [
        '__init__.py',
        'namelist.input.da_wrfvar.template',
        'namelist.input.dfi.template',
        'namelist.input.real.template',
        'namelist.input.wrf.template',
        'namelist.wps.template',
        'parame.in.template',
    ],
    subdir: 'wrfrun/res/namelist'
)